# filebox

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs  utils.rs  workflow.pest
src/subcommand/: executor.rs  lean.rs  mod.rs  normalize.rs  rewrite.rs  run.rs  workflow.rs
tests/: garbled-character-fix.txt
