[package]
name = "filebox"
version = "0.1.0"
edition = "2021"
description = "A toolbox for manipulating files"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.0", features = ["derive"] }
unicode-normalization = "0.1.22"
