[package]
name = "filebox"
version = "0.1.0"
edition = "2021"
description = "A toolbox for manipulating files"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
unicode-normalization = "*"
encoding_rs = "*"
cjk = "*"
walkdir = "*"
pest = "*"
pest_derive = "*"
chardetng = "*"